--- a/assets/css/daoshicha.css
+++ b/assets/css/daoshicha.css
@@ -16,20 +16,25 @@
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 20;
 }
 #top-bar-bg {
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
-  background: white;
-  background: -webkit-gradient(linear,left top,left bottom,from(white),to(white));
-  background: -moz-linear-gradient(top,white,white);
+  background: #111;
+  background: -webkit-gradient(linear,left top,left bottom,from(#333),to(#111));
+  background: -moz-linear-gradient(top,#333,#111);
   background: transparent\9;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FFFFFF',endColorstr='#FFFFFF');
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#333333',endColorstr='#111111');
+  box-shadow: 0 1px 2px rgba(0,0,0,0.5);
+  -moz-box-shadow: 0 1px 2px rgba(0,0,0,0.5);
+  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.5);
 }
 #top-bar {
   margin: 0 auto;
+  padding: 10px 0;
   width: 960px;
   text-align: left;
 }
@@ -39,6 +44,16 @@
   vertical-align: middle;
 }
 
+#content{
+  background: white; 
+  margin-top: 50px;
+  padding-top: 10px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  -moz-box-shadow: 0 3px 4px #999;
+  -webkit-box-shadow: 0 3px 4px #999;*border-right:1px solid #eee;
+}
 
 div.sidebar_box {
   border: 1px solid #EEEEEE;
