--- a/templates/master.html
+++ b/templates/master.html
@@ -16,7 +16,7 @@
 	
 	<style type="text/css" media="screen">
 		body.user-style{
-			background-image:url("http://s.twimg.com/a/1286563368/images/themes/theme9/bg.gif");
+/*			background-image:url("http://s.twimg.com/a/1286563368/images/themes/theme9/bg.gif");*/
 			background-color: black;
 		}
 	</style>
