Add URL stripper

--- a/group/templates/site_display.html
+++ b/group/templates/site_display.html
@@ -18,7 +18,7 @@
 
 {% block sidebar %}
 	<hr></hr>
-	<div id="groups" class="grid_3 alpha dashboard">
+	<div id="groups" class="grid_3 alpha dashboard-widget">
 		<h3>You Joined Groups</h3>
 		<ul>
 			{% for group in groups %}
@@ -34,7 +34,7 @@
 		
 		<p class="clear"></p>
 	</div>
-	<div id="recommend-groups" class="grid_3 omega dashboard">
+	<div id="recommend-groups" class="grid_3 omega dashboard-widget">
 		<h3>Recommend Groups</h3>
 		<ul>
 			{% for group in recommend_groups %}
