--- a/assets/css/daoshicha.css
+++ b/assets/css/daoshicha.css
@@ -21,7 +21,7 @@
 #top-bar-bg {
   width: 100%;
   height: 100%;
-  top: 0;
+  top: 0;+
   left: 0;
   background: #111;
   background: -webkit-gradient(linear,left top,left bottom,from(#333),to(#111));
@@ -32,6 +32,13 @@
   -moz-box-shadow: 0 1px 2px rgba(0,0,0,0.5);
   -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.5);
 }
+#sidebar{
+  height:100px;
+  -webkit-border-top-right-radius: 5px;
+  -moz-border-radius-topright: 5px;
+  border-top-right-radius: 5px;
+}
+
 #top-bar {
   margin: 0 auto;
   padding: 10px 0;
@@ -121,10 +128,10 @@ li.topic_list {
   margin-bottom: 10px;
 }
 
-.dashboard{
+.dashboard-widget{
   
 }
-  .dashboard ul, .dashboard ul li{
+  .dashboard-widget ul, .dashboard-widget ul li{
     list-style: none outside none;
     margin: 0;
   }
