--- a/templates/master.html
+++ b/templates/master.html
@@ -36,7 +36,9 @@
 			<div id="top-bar-bg">
 				<div id="top-bar">
 					<div id="top-bar-inside">
-						<h1 id="daoshicha" style="vertical-align:text-top; margin: 0px; color:white;"><strong>Daoshicha</strong>.com</h1>
+						<a href="/">
+							<h1 id="daoshicha" style="vertical-align:text-top; margin: 0px; color:white;"><strong>Daoshicha</strong>.com</h1>
+						</a>
 						<hr>
 					</div>
 				</div>
