Fix bug in django module

--- a/group/templates/group_display.html
+++ b/group/templates/group_display.html
@@ -34,7 +34,7 @@
 			{% endfor %}
 		</div>
 	</div>
-	<div id="control">
+	<div id="control" class="sidebar_box">
 		<ul>
 			{% if can_join %}
 				<a class="a-btn a-btn-m" href="/group/{{group.key.id}}/join"><span>Join Group</span></a>
