--- a/templates/master.html
+++ b/templates/master.html
@@ -61,7 +61,7 @@
 			<div id="footer" class="grid_12" style="bottom:0px;">
 				<hr></hr>
 				<span id="cp">
-				    &copy; 2005－2010 Daoshicha, all rights reserved
+				    &copy; 2011-2011 Daoshicha, all rights reserved
 				</span>
 				<span style="float: right; padding-right:10px;">
 					Powered by <a href="http://github.com/kangzhang/chrisw/">Chrisw</a>
