--- a/assets/css/daoshicha.css
+++ b/assets/css/daoshicha.css
@@ -33,7 +33,7 @@
   -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.5);
 }
 #sidebar{
-  height:100px;
+/*  height:100px;*/
   -webkit-border-top-right-radius: 5px;
   -moz-border-radius-topright: 5px;
   border-top-right-radius: 5px;
