--- a/assets/css/daoshicha.css
+++ b/assets/css/daoshicha.css
@@ -85,7 +85,8 @@ dl.member_box {
 li.topic_list {
   list-style: none outside none;
   border-bottom: 1px solid #EEEEEE;
-  padding-top: 12px;
+  padding-top: 6px;
+  padding-bottom: 6px;
 }
   li.topic_list:first-child{
     border-top: 1px solid #EEEEEE;
