--- a/front/templates/user_home.html
+++ b/front/templates/user_home.html
@@ -1,5 +1,7 @@
 {% extends "front_master.html" %}
 
+{% load i18n %}
+
 {% block title %}
 	The homepage for user
 {% endblock %}
@@ -7,7 +9,7 @@
 
 {% block content %}
 	<table border="0" cellspacing="5" cellpadding="5">
-		<tr><th>User Name</th></tr>
+		<tr><th>{% trans "User Name" %}</th></tr>
 		<tr><td>{{ user.username }}</td></tr>
 	</table>
 {% endblock %}
