--- a/group/templates/group_settings.html
+++ b/group/templates/group_settings.html
@@ -1,7 +1,9 @@
 {% extends "group_master.html" %}
 
+{% load i18n %}
+
 {% block title %}
-	Group Settings
+	{% trans "Group Settings" %}
 {% endblock %}
 
 {% block content %}
