--- a/group/templates/site_display.html
+++ b/group/templates/site_display.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block title %}
-	Welcome to daoshicha.com
+	{% trans "Welcome" %}
 {% endblock %}
 
 {% block html_head %}
@@ -20,7 +20,7 @@
 {% block sidebar %}
 	<hr></hr>
 	<div id="groups" class="grid_3 alpha dashboard-widget">
-		<h3>You Joined Groups</h3>
+		<h3>{% trans "You Followed Groups" %}</h3>
 		<ul>
 			{% for group in groups %}
 				<li>
@@ -36,7 +36,7 @@
 		<p class="clear"></p>
 	</div>
 	<div id="recommend-groups" class="grid_3 omega dashboard-widget">
-		<h3>Recommend Groups</h3>
+		<h3>{% trans "Recommend Groups" %}</h3>
 		<ul>
 			{% for group in recommend_groups %}
 				<li>
