--- a/group/templates/topic_list.html
+++ b/group/templates/topic_list.html
@@ -1,4 +1,6 @@
 
+{% load i18n %}
+
 <div id="topic-box">
 	<ol class="topics">
 		{% for topic in topics %}
@@ -10,7 +12,7 @@
 					<span style="display: block; margin-bottom: 5px;">
 						{{ topic.title }}
 					</span>
-					<span style=" color: #999999;">{{ topic.create_time }} by {{ topic.author.fullname }}</span>
+					<span style=" color: #999999;">{{ topic.create_time|date:"Y-n-j H:i" }} by {{ topic.author.fullname }}. • {{ topic.length }} {% trans "Posts" %} </span>
 				</span>
 			</li>
 		{% endfor %}
