--- a/assets/css/daoshicha.css
+++ b/assets/css/daoshicha.css
@@ -10,6 +10,9 @@ body {
   padding: 1.5em 0;
   padding-top: 60px;
 }
+#main_panel{
+  min-height: 360px;
+}
 #top-bar-outer {
   width: 100%;
   height: 40px;
