--- a/group/templates/site_display.html
+++ b/group/templates/site_display.html
@@ -22,7 +22,7 @@
 	<div id="groups" class="grid_3 alpha dashboard-widget">
 		<h3>{% trans "You Followed Groups" %}</h3>
 		<ul>
-			{% for group in groups %}
+			{% for group in my_groups %}
 				<li>
 					<a class="group-photo" href="/group/{{group.key.id}}"><img src="{{group.photo_url}}=s32" /></a>
 					<div class="group-title">
