test branch develop

--- a/front/templates/signup.html
+++ b/front/templates/signup.html
@@ -8,7 +8,7 @@
 
 	<form action="signup" method="post" accept-charset="utf-8">
 		{{form.as_p }}
-		<p><input type="submit" value="Create my account &rarr;"></p>
+		<p><input type="submit" value="{% trans "Greate My Account" %}"></p>
 	</form>
 
 {% endblock %}
