--- a/front/templates/signup.html
+++ b/front/templates/signup.html
@@ -1,7 +1,9 @@
 {% extends "front_master.html" %}
 
+{% load i18n %}
+
 {% block title %}
-	注册新用户
+	{% trans "Signup New User" %}
 {% endblock %}
 
 {% block content %}
