--- a/front/templates/user_home.html
+++ b/front/templates/user_home.html
@@ -12,7 +12,7 @@
 	<div id="user-profile" style = "margin-bottom:4em;">
 		<div class="pic" style="float:left;">
 		    <a href="http://www.douban.com/u/{{user.id}}">
-		        <img src="{{user.photo_url}}" alt="{{user.fullname}}" style="height:48px; width:48px;">
+		        <img src="{{user.photo_url}}" alt="{{user.fullname}}" class="im">
 		    </a>
 		</div>
 		<div class="info" style="margin-left:53px;padding-top:10px;">
@@ -33,7 +33,7 @@
 			<dl class="item-box">
 				<dt class="photo">
 					<a href="/group/{{group.key.id}}">
-						<img src="{{group.photo_url}}">
+						<img src="{{group.photo_url}}" class="im">
 					</a>
 				</dt>
 				<dd class="name">
