--- a/front/templates/user_home.html
+++ b/front/templates/user_home.html
@@ -28,7 +28,7 @@
 	
 	
 	<div id="group-box">
-		<h3>{% trans "Followed Group" %}:</h3>
+		<h3>{% trans "Followed Groups" %}:</h3>
 		{% for group in joined_groups %}
 			<dl class="item-box">
 				<dt class="photo">
