--- a/group/templates/site_display.html
+++ b/group/templates/site_display.html
@@ -24,7 +24,7 @@
 		<ul>
 			{% for group in my_groups %}
 				<li>
-					<a class="group-photo" href="/group/{{group.key.id}}"><img src="{{group.photo_url}}=s32" /></a>
+					<a class="group-photo" href="/group/{{group.key.id}}"><img class="is" src="{{group.photo_url}}=s32" /></a>
 					<div class="group-title">
 						<a class="group-name" href="/group/{{group.key.id}}">{{ group.title }}</a>
 						<span class="group-info">{{ group.introduction|truncatesmart:20 }}</span>
