--- a/group/templates/site_display.html
+++ b/group/templates/site_display.html
@@ -18,23 +18,40 @@
 {% endblock %}
 
 {% block sidebar %}
-	<hr></hr>
-	<div id="groups" class="grid_9 dashboard-widget">
-		<h3>{% trans "You Followed Groups" %}</h3>
-		<ul>
-			{% for group in my_groups %}
-				<li>
-					<a class="group-photo" href="/group/{{group.key.id}}"><img class="is" src="{{group.photo_url}}=s32" /></a>
-					<div class="group-title">
-						<a class="group-name" href="/group/{{group.key.id}}">{{ group.title }}</a>
-						<span class="group-info">{{ group.introduction|truncatesmart:20 }}</span>
-					</div>
-				</li>
-			{% endfor %}
-		</ul>
+	{% if is_not_guest %}
+		<div id="user-info" class="grid_9 dashboard-widget">
+			<div id="user-title">
+			  <h2>
+				<img class="ies" alt="{{ user.fullname }}" src="{{user.photo_url}}">
+				{{ user.fullname }}
+				{% if user.status_message %}
+					<span class="status-message">({{ user.status_message }})</span>
+				{% endif %}
+				</h2>
+			</div>
+		</div>
+		<div class="clear">
+		</div>
+		<div id="groups" class="grid_9 dashboard-widget">
+			<h3>{% trans "You Followed Groups" %}</h3>
+			<ul>
+				{% for group in my_groups %}
+					<li>
+						<a class="group-photo" href="/group/{{group.key.id}}"><img class="is" src="{{group.photo_url}}=s32" /></a>
+						<div class="group-title">
+							<a class="group-name" href="/group/{{group.key.id}}">{{ group.title }}</a>
+							<span class="group-info">{{ group.introduction|truncatesmart:20 }}</span>
+						</div>
+					</li>
+				{% endfor %}
+			</ul>
+
+			<p class="clear"></p>
+		</div>
 		
-		<p class="clear"></p>
-	</div>
+		<div class="clear">
+		</div>
+	{% endif %}
 	<div id="recommend-groups" class="grid_9 dashboard-widget">
 		<h3>{% trans "Recommend Groups" %}</h3>
 		<ul>
