--- a/templates/master.html
+++ b/templates/master.html
@@ -45,13 +45,13 @@
 						{% if is_not_guest %}
 							<div id="name">
 								<span>
-									<a href="/u/{{user.key.id}}">
-										<img style="margin-bottom:-3px;" width="20px" height="20px" src="{{user.photo_url}}" />																			
+									<a href="/u/{{login_user.key.id}}">
+										<img style="margin-bottom:-3px;" width="20px" height="20px" src="{{login_user.photo_url}}" />																			
 									</a>
 								</span>
 								<span style="padding-left:3px;">
-									<a href="/u/{{user.key.id}}" style="color:#aaa;">
-										{{ user.fullname }}
+									<a href="/u/{{login_user.key.id}}" style="color:#aaa;">
+										{{ login_user.fullname }}
 									</a>
 								</span>
 							</div>
