--- a/group/templates/group_display.html
+++ b/group/templates/group_display.html
@@ -41,7 +41,7 @@
 		</div>
 	</div>
 	<div id="control" class="sidebar_box">
-		<ul>
+		<ul class="buttom">
 			{% if can_join %}
 				<a class="a-btn a-btn-m" href="/group/{{group.key.id}}/join"><span>{% trans "Follow" %}</span></a>
 			{% endif %}
