--- a/templates/master.html
+++ b/templates/master.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+{% load i18n %}
 
 {% autoescape off %}
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
@@ -36,14 +37,22 @@
 			<div id="top-bar-bg">
 				<div id="top-bar" style="color:white;">
 					<div id="top-bar-inside">
-						<div id="logo" class= "grid_20" style="vertical-align:text-top; margin: 0px; float:left;">
-							<a href="/" style="vertical-align:text-top; margin: 0px; color:white; font-size:1.5em;">
+						<div id="logo" class= "grid_4 top-bar-item">
+							<a href="/" style="vertical-align:text-top; margin: 0px; font-size:1.5em;">
 								<strong>Daoshicha</strong>.com
 							</a>
 						</div>
-						
+						<div id="nav-menu" class="grid_16 top-bar-item" style="margin-bottom:-2px;">
+							<ul>
+								<li>
+									<a href="/group" style="vertical-align:text-top; margin: 0px;">
+										<strong>{% trans "Group" %}</strong>
+									</a>
+								</li>
+							</ul>
+						</div>
 						{% if is_not_guest %}
-							<div id="name">
+							<div id="name" class="grid_4 top-bar-item">
 								<span>
 									<a href="/u/{{login_user.key.id}}">
 										<img style="margin-bottom:-3px;" width="20px" height="20px" src="{{login_user.photo_url}}" />																			
