Fix the bug in translating

--- a/templates/master.html
+++ b/templates/master.html
@@ -39,14 +39,14 @@
 					<div id="top-bar-inside">
 						<div id="logo" class= "grid_4 top-bar-item">
 							<a href="/" style="vertical-align:text-top; margin: 0px; font-size:1.5em;">
-								<strong>Daoshicha</strong>.com
+								<strong>{{ site.site_name }}</strong>
 							</a>
 						</div>
 						<div id="nav-menu" class="grid_16 top-bar-item" style="margin-bottom:-2px;">
 							<ul>
 								<li>
 									<a href="/group" style="vertical-align:text-top; margin: 0px;">
-										<strong>{% trans "Group" %}</strong>
+										<strong>{% trans "Groups" %}</strong>
 									</a>
 								</li>
 							</ul>
@@ -86,7 +86,7 @@
 			<div id="footer" class="grid_24" style="bottom:0px;">
 				<hr></hr>
 				<span id="cp">
-				    &copy; 2011-2011 Daoshicha, all rights reserved
+				    &copy; 2011-2011 <a href="http://home.kangzhang.org">Kang Zhang</a> all rights reserved
 				</span>
 				<span style="float: right; padding-right:10px;">
 					Powered by <a href="http://github.com/kangzhang/chrisw/">Chrisw</a>
