--- a/assets/css/daoshicha.css
+++ b/assets/css/daoshicha.css
@@ -281,6 +281,12 @@ span.topic_content {
   display: block;
 }
 
+span.stats-count{
+  display: block;
+  font-size: 1.2em;
+  width:40px;
+}
+
 .topic_list .topic_actions {
   visibility: hidden;
 }
