--- a/front/templates/user_profile.html
+++ b/front/templates/user_profile.html
@@ -1,5 +1,7 @@
 {% extends "front_master.html" %}
 
+{% load i18n %}
+
 {% block title %}
 	User Settings
 {% endblock %}
@@ -10,13 +12,13 @@
 		
 		{{ photo_form.as_table }}
 		<input type="hidden" name="back_url" value="{{back_url}}">
-		<p><input type="submit" value="Change Photo"></p>
+		<p><input type="submit" value="{% trans "Change Photo" %}"></p>
 	</form>
 	
 	<form action="/u/profile" method="POST" accept-charset="utf-8">
 		
 		{{ form.as_table }}
 
-		<p><input type="submit" value="Save Settings"></p>
+		<p><input type="submit" value="{% trans "Save" %}"></p>
 	</form>
 {% endblock %}
