polish the translation

--- a/front/templates/signup_successful.html
+++ b/front/templates/signup_successful.html
@@ -1,11 +1,11 @@
 {% extends "front_master.html" %}
 
 {% block title %}
-	注册新用户
+	{% trans "Register New User" %}
 {% endblock %}
 
 {% block content %}
-	<p class="success">Success! You've been recored.</p>
-	
+
+	<p class="success">{% trans "Your account has been created successfully." %}</p>
 	 
 {% endblock %}
