--- a/front/templates/login_successful.html
+++ b/front/templates/login_successful.html
@@ -1,9 +1,9 @@
 {% extends "front_master.html" %}
 
 {% block title %}
-	Signup new user
+	{% trans "Sign In" %}
 {% endblock %}
 
 {% block content %}
-	Login successfully.
+	{% trans "Login successfully" %}
 {% endblock %}
