--- a/front/templates/login.html
+++ b/front/templates/login.html
@@ -1,14 +1,14 @@
 {% extends "front_master.html" %}
 
 {% block title %}
-	Signup new user
+	{% trans "Sign In" %}
 {% endblock %}
 
 {% block content %}
 
 	<form action="{{page_url}}" method="post" accept-charset="utf-8">
 		{{ form.as_p }}
-		<p><input type="submit" value="Continue &rarr;"></p>
+		<p><input type="submit" value="{% trans "Login" %}"></p>
 	</form>
 	
 {% endblock %}
