--- a/group/templates/topic_list.html
+++ b/group/templates/topic_list.html
@@ -12,7 +12,17 @@
 					<span style="display: block; margin-bottom: 5px;">
 						{{ topic.title }}
 					</span>
-					<span style=" color: #999999;">{{ topic.create_time|date:"Y-n-j H:i" }} by {{ topic.author.fullname }}. • {{ topic.length }} {% trans "Posts" %} • {{ topic.hits }} {% trans "Hits" %} </span>
+					<span style=" color: #999999;">
+						{% if display_group_name %}
+							<strong>
+								<a href="/group/{{topic.group.key.id}}" style="color:#888888; background-color:#EEEEEE; font-size:0.8em;">
+									&nbsp;{{ topic.group.title }}
+								</a>
+							</strong>
+							&nbsp;
+						{% endif %}
+						{{ topic.create_time|date:"Y-n-j H:i" }} by {{ topic.author.fullname }}. • {{ topic.length }} {% trans "Posts" %} • {{ topic.hits }} {% trans "Hits" %} 
+					</span>
 				</span>
 			</li>
 		{% endfor %}
