Polish the UI's color

--- a/group/templates/topic_list.html
+++ b/group/templates/topic_list.html
@@ -15,7 +15,7 @@
 					<span style=" color: #999999;">
 						{% if display_group_name %}
 							<strong>
-								<a href="/group/{{topic.group.key.id}}" style="color:#FFFFFF; background-color:#BBBBBB; font-size:0.8em;">
+								<a href="/group/{{topic.group.key.id}}" style="color: #ABABAB; background-color: #F3F3F3; font-size: 0.8em;">
 									&nbsp;{{ topic.group.title }}
 								</a>
 							</strong>
