--- a/templates/master.html
+++ b/templates/master.html
@@ -42,7 +42,7 @@
 								<strong>{{ site.site_name }}</strong>
 							</a>
 						</div>
-						<div id="nav-menu" class="grid_17 top-bar-item" style="margin-bottom:-2px;">
+						<div id="nav-menu" class="grid_14 top-bar-item" style="margin-bottom:-2px;">
 							<ul>
 								<li>
 									<a href="/group" style="vertical-align:text-top; margin: 0px;">
@@ -52,7 +52,7 @@
 							</ul>
 						</div>
 						{% if is_not_guest %}
-							<div id="name" class="grid_3 top-bar-item">
+							<div id="name" class="grid_6 top-bar-item">
 								<span>
 									<a href="/u/{{login_user.key.id}}">
 										<img style="margin-bottom:-3px;" width="20px" height="20px" src="{{login_user.photo_url}}" />																			
@@ -61,6 +61,18 @@
 								<span style="padding-left:3px;">
 									<a href="/u/{{login_user.key.id}}" style="color:#aaa;">
 										{{ login_user.fullname }}
+									</a>
+								</span>
+								
+								<span style="padding-left:10px;">
+									<a href="/u/profile" style="color:#eee;">
+										{% trans "Settings" %}
+									</a>
+								</span>
+								
+								<span style="padding-left:5px;">
+									<a href="/u/{{login_user.key.id}}" style="color:#eee;">
+										{% trans "Logout" %}
 									</a>
 								</span>
 							</div>
