Fix the logout bug

--- a/templates/master.html
+++ b/templates/master.html
@@ -71,7 +71,7 @@
 								</span>
 								
 								<span style="padding-left:5px;">
-									<a href="/u/{{login_user.key.id}}" style="color:#eee;">
+									<a href="/logout" style="color:#eee;">
 										{% trans "Logout" %}
 									</a>
 								</span>
