Fix the bug in error page

--- a/templates/error.html
+++ b/templates/error.html
@@ -1,7 +1,9 @@
 {% extends "master.html" %}
 
+{% load i18n %}
+
 {% block title %}
-	Sorry, got a error :-(
+	{% trans "Sorry, got a error :-(" %}
 {% endblock %}
 
 {% block content %}
