--- a/group/templates/groupsite_display.html
+++ b/group/templates/groupsite_display.html
@@ -84,18 +84,13 @@
 		<div class="clear">
 		</div>
 	{% endif %}
-	<div id="recommend-groups" class="grid_9 dashboard-widget">
-		<h3>{% trans "Recommend Groups" %}</h3>
-		<ul>
-			{% for group in recommend_groups %}
-				<li>
-					<a class="group-photo" href="/group/{{group.key.id}}"><img src="{{group.photo_url}}=s32" class="is"/></a>
-					<div class="group-title">
-						<a class="group-name" href="/group/{{group.key.id}}">{{ group.title }}</a>
-						<span class="group-info">{{ group.introduction|truncatesmart:20 }}</span>
-					</div>
-				</li>
-			{% endfor %}
-		</ul>
-	</div>
+
+	{% if sidebar_widgets %}
+		{% for widget in sidebar_widgets %}		
+			<div id="recommend-groups" class="grid_9 dashboard-widget">
+				{{ widget }}
+			</div>
+		{% endfor %}
+	{% endif %}
+	
 {% endblock %}
