upgrade to django 1.2

--- a/group/templates/groupsite_display.html
+++ b/group/templates/groupsite_display.html
@@ -87,7 +87,7 @@
 
 	{% if sidebar_widgets %}
 		{% for widget in sidebar_widgets %}		
-			<div id="recommend-groups" class="grid_9 dashboard-widget">
+			<div class="grid_9 dashboard-widget">
 				{{ widget }}
 			</div>
 		{% endfor %}
